--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "cross-env": "^7.0.3",
-    "eslint": "^7.21.0",
+    "eslint": "^7.22.0",
     "jest": "^26.6.3",
     "jwt-decode": "^3.1.2",
     "nodemon": "^2.0.7",
@@ -21,9 +21,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "knex": "^0.21.18",
+    "knex": "^0.21.19",
+    "knex-cleaner": "^1.3.1",
+    "pg": "^8.5.1",
     "sqlite3": "^5.0.2"
   },
   "repository": {
